--- a/app/src/main/res/layout/fragment_register_ch.xml
+++ b/app/src/main/res/layout/fragment_register_ch.xml
@@ -5,153 +5,158 @@
     android:layout_height="match_parent"
     tools:context="org.digitalcampus.oppia.fragments.register.RegisterCHFragment">
 
-    <FrameLayout
-        android:id="@+id/frame_stepper_indicator"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/theme_secondary_light"
-        android:paddingLeft="@dimen/padding_large"
-        android:paddingTop="@dimen/activity_vertical_margin"
-        android:paddingRight="@dimen/padding_large"
-        android:paddingBottom="@dimen/activity_vertical_margin">
-
-        <com.badoualy.stepperindicator.StepperIndicator
-            android:id="@+id/stepper_indicator"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/activity_horizontal_margin"
-            android:layout_marginRight="@dimen/activity_horizontal_margin"
-            app:stpi_circleColor="@color/theme_primary"
-            app:stpi_circleRadius="8dp"
-            app:stpi_indicatorColor="@color/theme_primary_dark"
-            app:stpi_stepCount="3" />
-    </FrameLayout>
 
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_above="@+id/view_register_ch_page_controls"
-        android:layout_below="@+id/frame_stepper_indicator"
-        android:layout_marginTop="@dimen/margin_medium">
+        android:layout_above="@+id/view_register_ch_page_controls">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:padding="@dimen/activity_horizontal_margin">
+            android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/tv_explanation_reg_screen"
+            <FrameLayout
+                android:id="@+id/frame_stepper_indicator"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="20dp"
-                android:text="Explanation Register CH screen 1"
-                android:textSize="17sp" />
+                android:background="@color/theme_secondary_light"
+                android:paddingLeft="@dimen/padding_large"
+                android:paddingTop="@dimen/activity_vertical_margin"
+                android:paddingRight="@dimen/padding_large"
+                android:paddingBottom="@dimen/activity_vertical_margin">
+
+                <com.badoualy.stepperindicator.StepperIndicator
+                    android:id="@+id/stepper_indicator"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
+                    android:layout_marginRight="@dimen/activity_horizontal_margin"
+                    app:stpi_circleColor="@color/theme_primary"
+                    app:stpi_circleRadius="8dp"
+                    app:stpi_indicatorColor="@color/theme_primary_dark"
+                    app:stpi_stepCount="3" />
+            </FrameLayout>
 
             <LinearLayout
-                android:id="@+id/view_reg_ch_screen_0"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                android:padding="@dimen/padding_medium"
+                android:layout_marginTop="@dimen/margin_medium">
 
-                <org.digitalcampus.oppia.utils.ui.ValidableTextInputLayout
-                    android:id="@+id/edit_reg_ch_first_name"
+                <TextView
+                    android:id="@+id/tv_explanation_reg_screen"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    app:required="true">
+                    android:layout_marginBottom="20dp"
+                    android:text="Explanation Register CH screen 1"
+                    android:textSize="17sp" />
 
-                    <EditText
-                        style="@style/EditValidableForm"
-                        android:hint="@string/first_name"
-                        android:inputType="textCapWords" />
-
-                </org.digitalcampus.oppia.utils.ui.ValidableTextInputLayout>
-
-                <org.digitalcampus.oppia.utils.ui.ValidableTextInputLayout
-                    android:id="@+id/edit_reg_ch_last_name"
+                <LinearLayout
+                    android:id="@+id/view_reg_ch_screen_0"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    app:required="true">
+                    android:orientation="vertical">
 
-                    <EditText
-                        style="@style/EditValidableForm"
-                        android:hint="@string/last_name"
-                        android:inputType="textCapWords" />
+                    <org.digitalcampus.oppia.utils.ui.ValidableTextInputLayout
+                        android:id="@+id/edit_reg_ch_first_name"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        app:required="true">
 
-                </org.digitalcampus.oppia.utils.ui.ValidableTextInputLayout>
+                        <EditText
+                            style="@style/EditValidableForm"
+                            android:hint="@string/first_name"
+                            android:inputType="textCapWords" />
 
-                <org.digitalcampus.oppia.utils.ui.ValidableTextInputLayout
-                    android:id="@+id/edit_reg_ch_employee_id"
+                    </org.digitalcampus.oppia.utils.ui.ValidableTextInputLayout>
+
+                    <org.digitalcampus.oppia.utils.ui.ValidableTextInputLayout
+                        android:id="@+id/edit_reg_ch_last_name"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        app:required="true">
+
+                        <EditText
+                            style="@style/EditValidableForm"
+                            android:hint="@string/last_name"
+                            android:inputType="textCapWords" />
+
+                    </org.digitalcampus.oppia.utils.ui.ValidableTextInputLayout>
+
+                    <org.digitalcampus.oppia.utils.ui.ValidableTextInputLayout
+                        android:id="@+id/edit_reg_ch_employee_id"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        app:cantContainSpaces="true"
+                        app:required="true">
+
+                        <EditText
+                            style="@style/EditValidableForm"
+                            android:hint="@string/employee_id"
+                            android:inputType="text" />
+
+                    </org.digitalcampus.oppia.utils.ui.ValidableTextInputLayout>
+                </LinearLayout>
+
+                <LinearLayout
+                    android:id="@+id/view_reg_ch_screen_1"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    app:cantContainSpaces="true"
-                    app:required="true">
+                    android:orientation="vertical">
 
-                    <EditText
-                        style="@style/EditValidableForm"
-                        android:hint="@string/employee_id"
-                        android:inputType="text" />
+                    <org.digitalcampus.oppia.utils.ui.ValidableTextInputLayout
+                        android:id="@+id/edit_reg_ch_password"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        app:required="true">
 
-                </org.digitalcampus.oppia.utils.ui.ValidableTextInputLayout>
+                        <EditText
+                            style="@style/EditValidableForm"
+                            android:hint="@string/register_form_password_title"
+                            android:inputType="textPassword" />
+
+                    </org.digitalcampus.oppia.utils.ui.ValidableTextInputLayout>
+
+                    <org.digitalcampus.oppia.utils.ui.ValidableTextInputLayout
+                        android:id="@+id/edit_reg_ch_password_again"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        app:required="true">
+
+                        <EditText
+                            style="@style/EditValidableForm"
+                            android:hint="@string/register_form_password_again_title"
+                            android:inputType="textPassword" />
+
+                    </org.digitalcampus.oppia.utils.ui.ValidableTextInputLayout>
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:id="@+id/view_reg_ch_screen_2"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+
+                    <androidx.appcompat.widget.AppCompatSpinner
+                        android:id="@+id/spinner_counties"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:paddingTop="5dp"
+                        android:paddingBottom="5dp" />
+
+                    <androidx.appcompat.widget.AppCompatSpinner
+                        android:id="@+id/spinner_districts"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="10dp"
+                        android:paddingTop="5dp"
+                        android:paddingBottom="5dp" />
+
+                </LinearLayout>
             </LinearLayout>
-
-            <LinearLayout
-                android:id="@+id/view_reg_ch_screen_1"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
-
-                <org.digitalcampus.oppia.utils.ui.ValidableTextInputLayout
-                    android:id="@+id/edit_reg_ch_password"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    app:required="true">
-
-                    <EditText
-                        style="@style/EditValidableForm"
-                        android:hint="@string/register_form_password_title"
-                        android:inputType="textPassword" />
-
-                </org.digitalcampus.oppia.utils.ui.ValidableTextInputLayout>
-
-                <org.digitalcampus.oppia.utils.ui.ValidableTextInputLayout
-                    android:id="@+id/edit_reg_ch_password_again"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    app:required="true">
-
-                    <EditText
-                        style="@style/EditValidableForm"
-                        android:hint="@string/register_form_password_again_title"
-                        android:inputType="textPassword" />
-
-                </org.digitalcampus.oppia.utils.ui.ValidableTextInputLayout>
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:id="@+id/view_reg_ch_screen_2"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
-
-                <androidx.appcompat.widget.AppCompatSpinner
-                    android:id="@+id/spinner_counties"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:paddingTop="5dp"
-                    android:paddingBottom="5dp" />
-
-                <androidx.appcompat.widget.AppCompatSpinner
-                    android:id="@+id/spinner_districts"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="10dp"
-                    android:paddingTop="5dp"
-                    android:paddingBottom="5dp" />
-
-            </LinearLayout>
-
         </LinearLayout>
     </ScrollView>
 
@@ -163,9 +168,9 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:background="@color/quiz_navigation_bar"
+        android:orientation="horizontal"
         android:paddingLeft="@dimen/margin_medium"
-        android:paddingRight="@dimen/margin_medium"
-        android:orientation="horizontal">
+        android:paddingRight="@dimen/margin_medium">
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/btn_register_ch_previous"
